# fitness-backend

./: Dockerfile  pyproject.toml
backend/: urls.py  wsgi.py
backend/settings/: base.py  dev.py  prod.py
fitness/: admin.py  models.py  serializers.py  urls.py  views.py
fitness/migrations/: 0001_initial.py  0002_rename_discipline_activity.py  0003_rename_discipline_workout_activity_and_more.py
